# packet-maze

./: .gitignore  .skilz  Dockerfile  Dockerfile.ubuntu  Makefile  README.md  docker-compose.yml  docker_entrypoint.sh  level_0_register_arp_link.py  level_1_baby_steps_ip_internet.py  level_2_are_you_alive_icmp_internet.py  level_4_a_short_conversation_tcp_transport.py  level_5_worldwidewebz_http_application.py  packet_maze.c  packet_maze.py  requirements.txt  setup.cfg  setup.py
packet_maze/: packet_maze.c  packet_maze.py
solutions/python/: level_0_register_arp_link.py  level_1_baby_steps_ip_internet.py  level_2_are_you_alive_icmp_internet.py  level_3_yeet_udp_transport.py  level_4_a_short_conversation_tcp_transport.py  level_5_worldwidewebz_http_application.py
src/: common_params.c  common_user_bpf_xdp.c  http.py  internet.py  registration.py  tcp.py  udp.py  xdp_loader.c  xdp_pass_user.c
src/common/: common.mk  common_libbpf.c  libbpf.c  params.c  user_bpf_xdp.c  xdp_loader.c
src/headers/: common_defines.h  common_libbpf.h  common_params.h  common_user_bpf_xdp.h  packet_parsers.h  xdp_level_user.h
src/kern/: kern.mk  xdp_packet_drop.c  xdp_packet_trainer.c
src/python/: python.mk  toggleDroppingPackets.py
src/user/: user.mk  xdp_packet_trainer.c
