# Thank you https://gist.github.com/juancarlospaco/b91d7736281e2090fce84ed399c68972 for this 'setup.cfg' template!

[metadata]
name             = packet_maze
provides         = packet_maze
description      = An interactive training tool for budding network programming enthousiast's!
url              = https://github.com/ArchiMoebius/packet-maze
download_url     = https://github.com/ArchiMoebius/packet-maze
author           = Archi Moebius
author_email     = ArchiMoebius@dojobebo.com
maintainer       = Archi Moebius
maintainer_email = ArchiMoebius@dojobebo.com
keywords         = python3
license          = GPL-3 LGPL-3
platforms        = Linux
version          = 0.1.1
project_urls     =
    Docs = https://github.com/ArchiMoebius/packet-maze/README.md
    Bugs = https://github.com/ArchiMoebius/packet-maze/issues
    C.I. = https://github.com/ArchiMoebius/packet-maze/

license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Software Development

[options]
packages         = packet_maze
zip_safe = True
include_package_data = True
python_requires  = >=3.8
tests_require    = isort
setup_requires   = pip
install_requires =
    pip
    scapy>=2.4.5
    rich>=12.5.1

[options.package_data]
packet_maze = *.c, *.h

[options.entry_points]
console_scripts =
    packet_maze = packet_maze.packet_maze:main

[options.packages.find]
where   = .
include = *.py *.c *.h
exclude = *.pyc, *.tests, *.tests.*, tests.*, tests


[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
